[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "jdatetime==5.2.0",
    "psutil>=7.0.0",
    "python-telegram-bot[job-queue]==20.8",
    "pytz==2024.2",
    "requests==2.32.4",
    "telegram>=0.0.1",
    "watchdog>=6.0.0",
]
